# mkdocs-utilizing-pyscript

./: .gitignore  .gitlab-ci.yml  404.html  CITATION.cff  README.md  index.html  mkdocs.yml  mycode.html  pyproject.toml  pyscript.toml  pyscript_level0.toml  pyscript_level1.toml
custom_theme/partials/: copyright.html
docs/: index.md  mycode  page1.md  pyscript.toml
js/: extra.js
mycode/: main.py  utils.py
page1/: index.html
search/: search_index.json
