[tool.poetry]
name = "projecta"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
js = "^1.0"
pandas = "^2.0.2"
matplotlib = "^3.7.1"
pyodide-py = "^0.23.2"
arrr = "^1.0.4"


[tool.poetry.group.dev.dependencies]
ipython = "^8.14.0"
reuse = "^1.1.2"


[tool.poetry.group.doc.dependencies]
mkdocs = "^1.4.3"
mkdocs-material = "^9.1.15"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
